# spectre

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
scripts/: build_analysis.py
src/: findings.py
src/agent/: discovery.py  discovery_tools.py  ghidra_tools.py  loader.py  ppc_tools.py  prompts.py  runtime_tools.py  scorer_builder.py  state.py  task.py  tool_builder.py  tools.py
src/agent/prompts/: __init__.py  builder.py  hud.py  noclip.py  position.py  research.py  shared.py
src/agent/prompts/strategies/: find_code_patch.py
src/dolphin/: input.py  runner.py  session.py
src/ghidra/: __init__.py  analyze.py  cache.py  iso.py
src/web/: app.py  runner.py  sample_builder.py  sessions.py
src/web/static/: index.html  mask-painter.js  style.css
